--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "cross-env": "^6.0.3",
     "electron-is-dev": "^1.1.0",
+    "random-number": "^0.0.9",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start-react": "react-scripts start",
