--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.5.0",
     "cross-env": "^6.0.3",
     "electron-is-dev": "^1.1.0",
+    "prop-types": "^15.7.2",
     "random-number": "^0.0.9",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.1",
